--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     <artifactId>testng</artifactId>
     <version>7.8.0</version>
 </dependency>
+      <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+      <dependency>
+          <groupId>io.github.bonigarcia</groupId>
+          <artifactId>webdrivermanager</artifactId>
+          <version>5.4.1</version>
+      </dependency>
 
 
   </dependencies>
