--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
           <artifactId>webdrivermanager</artifactId>
           <version>5.4.1</version>
       </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
 
 
   </dependencies>
